Replace joda-time with ThreeTenABP

--- a/app/src/main/res/layout/activity_knell.xml
+++ b/app/src/main/res/layout/activity_knell.xml
@@ -6,9 +6,9 @@
     android:background="@color/backgroundColor">
 
     <Button
+        android:id="@+id/clear_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="btnClearBirthday"
         android:text="Clear"
         app:layout_constraintRight_toLeftOf="parent" />
 
