--- a/app/src/main/res/layout/activity_knell.xml
+++ b/app/src/main/res/layout/activity_knell.xml
@@ -12,10 +12,31 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="@string/label_clear"
-        app:layout_constraintBottom_toTopOf="@+id/years"
+        app:layout_constraintDimensionRatio="2:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <org.pocketx.knell.view.ClockView
+        android:id="@+id/clock_view"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="You have already survived in this world"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/clock_view" />
+
 
     <TextView
         android:id="@+id/years"
@@ -23,12 +44,10 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/days"
+        app:layout_constraintBottom_toTopOf="@id/days"
         app:layout_constraintEnd_toStartOf="@+id/months"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/clear_button"
-        app:layout_constraintVertical_chainStyle="spread"
         tools:text="1\n年" />
 
     <TextView
@@ -65,7 +84,6 @@
         app:layout_constraintEnd_toStartOf="@+id/hours"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/years"
         tools:text="1\n日" />
 
     <TextView
