--- a/app/src/main/res/values-v23/colors.xml
+++ b/app/src/main/res/values-v23/colors.xml
@@ -4,8 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="status_bar_background">#EAEAEA</color>
-
+    <color name="status_bar_background">@android:color/transparent</color>
 
     <!--背景色-->
     <color name="backgroundColor">#F5F5F5</color>
