--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,9 +5,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/white</item>
     </style>
 
-
-    <style name="KnellAppTheme" parent="KnellBaseTheme"></style>
+    <style name="KnellAppTheme" parent="KnellBaseTheme" />
 
 </resources>
